name: Fasta
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
maintainer: jrp@dial.pipex.com
homepage: https://github.com/jrp2014/fasta
synopsis: Local Sequence Alignment Against a Database Problem
category: Text
author: John Pavel
extra-source-files:
    ChangeLog.md
    README.md
x-ghc-framework-version: 8.0.2-9.6-1
x-last-ide-version: HfM1.6.0

executable Fasta
    main-is: Main.hs
    build-depends:
        base -any,
        Unique -any,
        containers -any
    default-language: Haskell2010
    other-modules:
        Fasta

